<resources>
    <string name="app_name">Ruturn Trading</string>
    <string name="homeSubmit">Next</string>
    <string name="send">Resend</string>
    <string name="cont">Continue</string>
    <string name="done">Done</string>
    <string name="Country"><font size="15">Country</font></string>
    <string name="MobNumber"><font size="15">Phone Number</font></string>
    <string name="jse_sol_text">JSE-SOL</string>
    <string name="button_sell_text">SELL</string>
    <string name="network_wifi">Wi-Fi</string>
    <string name="network_mobile">Mobile</string>
    <string name="Name"><font size="15">Name</font></string>
    <string name="SureName"><font size="15">Surname</font></string>
    <string name="Email"><font size="15">Email</font></string>
    <string name="Id"><font size="15">RSA ID</font></string>
    <string name="Address"><font size="15">Address</font></string>
    <string name="termsCond">By signing up, your agree to the terms and conditions  privacy policy</string>
    <string name="pinLock">Enter Pin</string>
    <string name="newpinLock">Enter new pin</string>
    <string name="reenternewpinLock">Enter re-enter new pin</string>
    <string name="authentication">Authentication</string>
    <string name="fingerMsg">Please place your finger on the fingerprint sensor</string>
    <string name="Home1">Hi there! We need a few things before you can get started</string>
    <string name="Home2">Ruturn Trading needs access to your contacts, device storage, SMS.</string>
    <string name="investedAmount">Invested amount</string>
    <string name="sharesPurchased">Shares purchased</string>
    <string name="purchasedSharePrice">Purchased share price</string>
    <string name="currentSharePrice">Current Share Price\n(Delayed 15 mins)</string>
    <string name="totalHoldings">Total Holdings</string>
    <string name="profitLossPercentage">Profit / (Loss) %</string>
    <string name="profitLossValuePerShare">Profit / (Loss) P / Share</string>
    <string name="profitLossValue">Profit / (Loss) Value</string>
    <string name="button_buy_text">BUY</string>
    <string name="Id_doc_Textview">*ID Documents (SA Citizener/ Passport Foreign Nationals)</string>
    <string name="upload_doc_text_two">*Utility Bill, Signed lease agreement, Life insurance policy, Bank statement etc..</string>
    <string name="banksstatemnt_upload_text">If you uploaded a bank statement as your proof of residence, you do not need to upload it here</string>
    <string name="proof_checkbox_text">I have uploaded a bank statement under proof of residence</string>
    <string name="otp_verificationText">An verification SMS has been sent to +975545758754 </string>
    <string name="emai_verification_text"><font color='green'>Note:</font> If you\'ve opened your verification email on your desktop or mobile devices then please select the button above to refresh the app.</string>
    <string name="proceed">PROCEED</string>
    <string name="warn">Registration Incomplete: You would be able to trade an instrument - post uploading required documents."</string>
    <string name="current_pe_ratio">Current P/E ratio (ttm)</string>
    <string name="earning_per_share">Earning Per Share (Zar) (ttm)</string>
    <string name="est_peg_ratio">Est. PEG Ratio</string>
    <string name="market_cap">Market Cap (M ZAR)</string>
    <string name="shared_outstanding">Shared Outstanding (M)</string>
    <string name="price_book">Price / Book (mrq)</string>
    <string name="price_sales">Price / Sales (ttm)</string>
    <string name="dividend_indicated_gross_fields">Dividend Indicated Gross Yield</string>
    <string name="next_earning_announcement">Next Earning Announcement</string>
    <string name="last_dividend_reported">Last Dividend Reported (16-03-24)</string>
    <string name="syr_net_dividend_growth">SYR Net Dividend Growth</string>
    <string name="average_volume">Average Volume (30 days)</string>
    <string name="log_out">LOGOUT</string>
    <string name="total_transaction_amt">Total Transaction Amount</string>
    <string name="enter_pin_confirm_purchase">Enter Pin to Confirm Purchase</string>
    <string name="place_your_finger">Place Your Finger</string>
    <string name="heading">ZSE swings into positive territory</string>
    <string name="timing">May 05 2017 16:31</string>
    <string name="note">The Zimbabwe Stock Exchange has returned to positive territory for the first time since....</string>
    <string name="title_activity_news_description">NewsDescriptionActivity</string>
    <string name="totalTransaction">Total Transaction Amount : R ;</string>
    <string name="trade">MTN Group, formerly M-Cell, is a South Africa-based multinational mobile telecommunications company, operating in many African, European and Asian countries. Its head office is in Johannesburg.</string>
    <string name="title_fee_details">Fee Details</string>
    <string name="txt_empty_string" />
    <string name="txt_note_add_money"> 1. To make a deposit into your Ruturn Trading Account, please select the bank from the above list,
        which will display the correct EFT details. Then use the above reference number to make a deposit into that account.
        \n\n2. Your deposit can take up to 48 hours to clear and show in your Ruturn Trading Wallet.
    \n\n3. For users who bank with Capitec or another bank not listed here, please deposit into First National Bank.</string>
    <string name="txt_menu_add_money">Add Money</string>
    <string name="txt_menu_with_draw">Withdraw Money</string>
    <string name="txt_menu_change_password">Change Password</string>
    <string name="txt_menu_privacy_policy">Privacy Policy</string>
    <string name="txt_menu_fica">FICA</string>
    <string name="txt_menu_sars">SARS (coming soon)</string>
    <string name="txt_menu_language">Language (coming soon)</string>
    <string name="txt_menu_report_problem">Report a Problem</string>
    <string name="txt_menu_submit_details"> Submit Details</string>
    <string name="txt_menu_help_qa">FAQ</string>
    <string name="txt_menu_terms_conditions">Terms and Conditions</string>
    <string name="txt_menu_terms_conditions_partner">Terms and Conditions Partner</string>
    <string name="txt_email_report_bug">ruturntrader@gmail.com</string>
    <string name="hint_withdraw_money">1. While selling shares the user will not able to withdraw money right away, as money would be tied up for 3 days. However the user would be able to buy other shares.\n\n2. Requests received before 2pm Monday to Friday, will be released from our Mercantile Bank account
    by 4pm.\n\n3. Requests received after 2pm Monday to Friday, as well as requests received on a weekend/public holidays, your funds will only be released the following business day.</string>
    <string name="txt_menu_invite_email_friends">Invite Email Friends</string>
    <string name="txt_menu_invite_twitter">Invite Twitter Friends</string>
    <string name="txt_menu_invite_phone_contact">Invite Phone Contacts</string>
    <string name="txt_menu_invite_facebook">Invite Facebook Friends</string>
    <string name="txt_menu_send_money">Send Money (coming soon)</string>
    <string name="txt_menu_send_share">Send Shares (coming soon)</string>
    <string name="txt_menu_sound">Sound</string>
    <string name="txt_menu_friend">Friend (coming soon)</string>
    <string name="txt_menu_social">Social (coming soon)</string>
    <string name="txt_menu_breaking_news">Breaking News</string>
    <string name="txt_menu_jse_news">JSE Notification</string>
    <string name="txt_menu_company_notification">Company Notification</string>
    <string name="txt_menu_general">General</string>
    <string name="txt_menu_social_header">Social</string>
    <string name="txt_menu_settings">Settings</string>
    <string name="txt_share_content">Your best buddy is using Ruturn Trading and wants you to join too.\nHere is a %1$s to our website to download the Ruturn Trading app and start trading today.\n</string>
    <string name="txt_alert_withdrawal_notice">"Your withdrawal request has been received and will be actioned within the next few days"</string>
    <string name="txt_fav">Favourites</string>
    <string name="txt_label_withdraw">Enter amount to withdraw (in Rand)</string>
    <string name="txt_fica_notes"><font color='green'>Note:</font> If you want to get your FICA documents updated, please attach the documents and Email us.\n\nSomeone will be in contact with you to discuss this further.</string>
    <string name="txt_top_forty">Top 40</string>
    <string name="txt_day">Best of Day</string>
    <string name="txt_permission_request_contact">In order to invite your phone contacts we need permission to access your contact book please allow us access it.</string>
    <string name="txt_permission_request_camera_storage">In order to upload document &amp; take pictures we need permission to access your storage,camera so please allow us access it.</string>
    <string name="txt_start_up_header">Hi there! We need a few things from you.</string>
    <string name="txt_start_up_content">Throughout your experience with us, we may ask for access to your Contacts, Device Storage, SMS etc. We will only ever ask for access to items that will improve your experience.</string>
    <string name="txt_next">Next</string>
    <string name="txt_save_and_exit">Save and Exit</string>
    <string name="txt_terms_policy_ack">By entering your phone number and ticking the checkboxes above, you agree to all Terms and Conditions of any of the subsidiaries, execution partners and holding companies.</string>
    <string name="txt_resend_hint">Haven\'t received the verification code yet?</string>
    <string name="txt_agree_text">I agree to the <font color='#49C786'>Terms and Conditions</font> of Ruturn Trading</string>
    <string name="txt_agree_text_partner">I agree to the <font color='#49C786'>Terms and Conditions</font> of the Execution Partner</string>
    <string name="txt_header_basic_info">Welcome to Ruturn Trading!</string>
    <string name="txt_label_cell_number">Cell Number</string>
    <string name="txt_error_your_cell_number_does_not_match">Please enter a valid cell number</string>
    <string name="txt_error_label_email_incorrect">Please enter a valid email address</string>
    <string name="txt_error_label_id_number_incorrect">Please enter a valid RSA ID</string>
    <string name="txt_label_upload_doc_title">Please select if you are using an ID Book or ID Card. A Card requires a picture of both the front and back.\n\nI have a:</string>
    <string name="txt_label_green_card">GREEN ID BOOK</string>
    <string name="txt_label_id_card">Id card</string>
    <string name="txt_submit">Submit</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="num_zero">0</string>
    <string name="cell_number">Cell Number - 082 456 7891</string>
    <string name="required_email">*Required - Email</string>
    <string name="required_cell_number">*Required - Cell Number</string>
    <string name="required_rsa_id_number">*Required - RSA ID Number</string>
    <string name="rsa_id">RSA ID</string>
    <string name="txt_submit_detail_hint"> Please submit your new cellphone number, ID number and email address in order for it to be updated on our system.</string>
    <string name="txt_suspend_dialog">This share has been suspended</string>
    <string name="txt_suspend_dialog1">learn more FAQ.</string>
    <string name="txt_suspend_dialog2">If this status persists after 24 hrs or URGENT help is required, contact</string>
    <string name="txt_suspend_dialog3">support@ruturntrading.co.za</string>
</resources>