<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textStyle="bold"
        android:textSize="15sp"
        android:id="@+id/heading"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timing"
        android:textSize="12sp"
        android:textColor="#A6ACAF"
        android:id="@+id/timing"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="15sp"
        android:id="@+id/note"/>
</LinearLayout>