<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:num="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homePage"
    android:weightSum="1">

    <com.returntrader.view.widget.NumberView
        android:id="@+id/NumberView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/homePage"
        android:padding="0dp"
        num:cols="3"
        num:maxVScale="0.5"
        num:rows="4">


        <TextView
            android:id="@+id/num_b1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0px"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/num_one"
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22" />

        <TextView
            android:id="@+id/num_b2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0px"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/num_two"
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22" />

        <TextView
            android:id="@+id/num_b3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/num_three"
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22" />


        <TextView
            android:id="@+id/num_b4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/num_four"
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22" />

        <TextView
            android:id="@+id/num_b5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/num_five"
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22" />

        <TextView
            android:id="@+id/num_b6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/num_six"
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22" />


        <TextView
            android:id="@+id/num_b7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/num_seven"
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22" />

        <TextView
            android:id="@+id/num_b8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/num_eight"
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22" />

        <TextView
            android:id="@+id/num_b9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/num_nine"
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_selector_number"
            android:clickable="false"
            android:gravity="center"
            android:padding="0px"
            android:text=""
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22"
            android:visibility="visible" />

        <TextView
            android:id="@+id/num_b0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px"
            android:text="@string/num_zero"
            android:textColor="@color/ic_selector_number_color"
            android:textSize="@dimen/sp_22" />


        <RelativeLayout
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_selector_number"
            android:gravity="center"
            android:padding="0px">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_backspace" />
        </RelativeLayout>
    </com.returntrader.view.widget.NumberView>

</LinearLayout>